id not found 404 and fix some doc
