# master/server/models/task_crash.go
@@ -1,9 +1,19 @@
 package models
 
+// swagger:model
 type TaskCrash struct {
-	ID            uint64 `gorm:"primary_key" json:"id"`
-	TaskID        uint64 `json:"taskid" sql:"type:bigint REFERENCES task(id) ON DELETE CASCADE"`
-	BotCrashID    uint64 `json:"-"`
-	Path          string `json:"-"`
-	ReproduceAble bool   `json:"reproduceAble"`
+	// example: 1
+	ID uint64 `gorm:"primary_key" json:"id"`
+
+	// example: 1
+	TaskID uint64 `json:"taskid" sql:"type:bigint REFERENCES task(id) ON DELETE CASCADE"`
+
+	// example: 1
+	BotCrashID uint64 `json:"-"`
+
+	// example: ./crashes/xxxx
+	Path string `json:"-"`
+
+	// example: true
+	ReproduceAble bool `json:"reproduceAble"`
 }
